Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -137,8 +137,8 @@
     <h1>LUCILE est-ce que tu veux être ma valentine ?</h1>
 
     <section class="button-zone" id="zone">
-      <button id="yesBtn">Yes</button>
-      <button id="noBtn">No</button>
+      <button id="yesBtn">Oui</button>
+      <button id="noBtn">Non</button>
     </section>
 
     <div class="hint" id="hint">pourquoi tu veux appuyer sur non sale folle</div>
@@ -226,5 +226,6 @@
   </script>
 </body>
 </html>
+
 
 
